[package]
name = "octynectl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
hyperlocal-with-windows = { version = "0.8.2", features = ["client"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
