[package]
name = "octynectl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
futures-util = { version = "0.3.28", features = ["io"] }
hyper = { version = "0.14", features = ["full"] }
hyperlocal-with-windows = { version = "0.8.2", features = ["client"] }
minus = { version = "5.4.2", features = ["search", "static_output"] }
pathsearch = "0.2.0"
rpassword = "7.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.7.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20.0"
uds_windows = "1.0.2"

[target.'cfg(target_family = "unix")'.dependencies]
pager = "0.16.1"
