[package]
name = "octynectl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.28.1"
futures-util = { version = "0.3.31", features = ["io"] }
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
hyperlocal-with-windows = { version = "0.9.0", features = ["client"] }
minus = { version = "5.6.1", features = ["search", "static_output"] }
pathsearch = "0.2.0"
rpassword = "7.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.14.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26.1"
tokio-util = { version = "0.7.13", features = ["codec"] }
uds_windows = "1.1.0"

[target.'cfg(target_family = "unix")'.dependencies]
pager = "0.16.1"
